# mcp_client

./: .gitignore  pyproject.toml
api/: graph_mcp.py  langgraph.json  main.py  mcp_client.py  requirements.txt
front/: chatbot.py
front_langgraph/: index.html  package-lock.json  package.json  vite.config.js
front_langgraph/src/: App.tsx  index.css
front_langgraph/src/components/: InputForm.tsx  LangGraphChat.tsx  WelcomeScreen.tsx
mcp_client/: ChatManager.py  LICENSE  MCP_Client.py  README.md  pyproject.toml
mcp_client/backend/: .env.example  .gitignore  ChatManager.py  MCP_Client.py  README.md  app.py  config.py  database.py  mcp_client.db  models.py  pyproject.toml
mcp_client/docs/: API.md  BACKEND.md  FRONTEND.md
mcp_client/frontend/: package-lock.json  package.json  tsconfig.app.json
mcp_client/frontend/src/: App.tsx  index.css
mcp_client/frontend/src/components/: ChatInterface.tsx  Layout.tsx  SettingsModal.tsx
mcp_client/frontend/src/lib/: api.ts
mcp_client/frontend/src/types/: index.ts
weather/: pyproject.toml  weather.py
