[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.119.0",
    "groq>=0.22.0",
    "mcp>=1.6.0",
    "openai>=2.3.0",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
    "uvicorn>=0.34.0",
]
